--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:              Tingan's Hobby Projects
+title:              Tingan's Blog
 email:
 description:        A Blog about personal hobby projects
 author:             Tingan Tang
