--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,24 @@
-title:              Tingan's Blog
+title: "Tingan's Blog"
 email:
-description:        A Blog about personal hobby projects
-author:             Tingan Tang
-baseurl:            ""
-url:                "https://tingan.github.io"
+description: “Talk is cheap. Show me the code.” --- My personal hobby projects
+author: Tingan Tang
+baseurl: ""
+url: "https://tingan.github.io"
 
 # Social Profiles
 twitter_username:
-github_username:    tingan
+github_username: tingan
 facebook_username:
 instagram_username:
 linkedin_username: tingan-tang-44183aa
 
 # Add your google-analytics ID here to activate google analytics
-google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
+google_analytics: UA-XXXXXXXXX-X # out your google-analytics code
 
 # Build settings
-markdown:           kramdown
-paginate:           5
-paginate_path:      "/posts/page:num/"
+markdown: kramdown
+paginate: 5
+paginate_path: "/posts/page:num/"
 plugins:
   - jekyll-feed
   - jekyll-paginate
