--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Tingan's Blog"
 email:
-description: “Talk is cheap. Show me the code.” --- My personal hobby projects
+description: “Talk is cheap. Show me the code.” --- Hobby projects to make the world better.
 author: Tingan Tang
 baseurl: ""
 url: "https://tingan.github.io"
